--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>  
  <html>  
+    <head>
  <body>  
  <h1>Sumar dos números</h1>  
  <p>Por favor, introduce dos números:</p>  
@@ -27,5 +28,6 @@
    document.getElementById("sumando").innerHTML = text;  
  }  
  </script>  
+  </head>
  </body>  
  </html> 
