--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         }
       </script>
 </head>
-<h1>Sumar dos números</h1>  
- <p>Por favor, introduce dos números:</p>  
+<h1>Suma de  dos números</h1>  
+ <p>introduce  numeros </p>  
  <input id="num1"><br>  
  <input id="num2">  
  <button type="button" onclick="myFunction()">Sumar</button>  
