--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fecha y hora</title>
+    <title></title>
     <link rel="stylesheet" href="estilo.css">
     <link rel="manifest" href="./manifest.json">
     <script type="text/javascript">
