--- a/index.html
+++ b/index.html
@@ -4,40 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="estilos.css">
+    <title>Colores </title>
     <link rel="manifest" href="./manifest.json">
     <script type="text/javascript">
-        if ("serviceWorker" in navigator) {
-          navigator.serviceWorker.register("sw.js");
-        }
-      </script>
+          if ("serviceWorker" in navigator) {
+    navigator.serviceWorker.register("sw.js");
+  }
+    </script>
 </head>
-<h1>Suma de  dos números</h1>  
- <p>introduce  numeros </p>  
- <input id="num1"><br>  
- <input id="num2">  
- <button type="button" onclick="myFunction()">Sumar</button>  
- <p id="sumando"></p>  
- <script type="text/javascript">
-    if ("serviceWorker" in navigator) {
-      navigator.serviceWorker.register("sw.js");
-    }
-  </script>
- <script>  
- function myFunction() {  
-   var x,y,suma,text;  
-   x = document.getElementById("num1").value;  
-   y = document.getElementById("num2").value;  
-   if (isNaN(x) || isNaN(y)) {  
-     text = "Es necesarios introducir dos números válidos";  
-   } else {  
-     //si no ponemos parseFloat concatenaría x con y  
-     suma=parseFloat(x)+parseFloat(y);  
-     text= suma;  
-   }  
-   document.getElementById("sumando").innerHTML = text;  
- }  
- </script> 
+<body background=".../../imagenes/fondo.jpg">
+     
+<h1>  Aprende los colores de forma divertida</h1>
+
+ <hr>
+ <center><video autoplay controls src=".../../imagenes/video.mp4" width="500" height="300"></video></center>
+ <h1>  Aprende los colores con los numeros</h1>
+ <center><a class="imai" href="numeros.html"><img src=".../../imagenes/losnumeros.jpg"   width="500" height="300"> </a
+    > </center>
+<hr>
+<h1>  Aprende los colores con las vocales</h1>
+    <center><a class="imai" href="vocales.html"><img src=".../../imagenes/vocales.jpg"   width="500" height="300"> </a> </center>
+<hr>
+<h1>  Aprende los colores con las frutas</h1>
+    <center><a class="imai" href="frutas.html"><img src=".../../imagenes/frutas.jpg"   width="500" height="300"> </a> </center>
+</body>
+</body>
 </body>
 </html>
